force-app/main/default/objects/Base_Price__mdt/Base_Price__mdt.object-meta.xml
<CustomObject>
    <description>Base prices decided closely with the Authoritative Strategists.</description>
    <label>Base Price</label>
    <pluralLabel>Base Prices</pluralLabel>
</CustomObject>