force-app/main/default/objects/Base_Price__mdt/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <description>Base Price for this Mode of logistics.</description>
    <inlineHelpText>Base Price for this Mode of logistics.</inlineHelpText>
    <label>Base Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>