force-app/main/default/objects/Base_Price__mdt/fields/Primary_Mode_of_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mode_of_Logistics__c</fullName>
    <description>Select a Mode of logistics primarily used for the Parcel&apos;s journey.</description>
    <inlineHelpText>Select a Mode of logistics primarily used for the Parcel&apos;s journey.</inlineHelpText>
    <label>Primary Mode of Logistics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Land Carrier</fullName>
                <default>true</default>
                <label>Land Carrier</label>
            </value>
            <value>
                <fullName>Water Carrier</fullName>
            </value>
            <value>
                <fullName>Air Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>