force-app/main/default/objects/Base_Price__mdt/fields/Seconday_Mode_of_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Seconday_Mode_of_Logistics__c</fullName>
    <description>Select a secondary means of travel the Parcel does in its logistics.</description>
    <inlineHelpText>Select a secondary means of travel the Parcel does in its logistics.</inlineHelpText>
    <label>Secondary Mode of Logistics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Land Carrier</fullName>
                <default>true</default>
                <label>Land Carrier</label>
            </value>
            <value>
                <fullName>Water Carrier</fullName>
            </value>
            <value>
                <fullName>Air Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>