force-app/main/default/objects/Base_Price__mdt/fields/Weight_Segment__c.field-meta.xml
<CustomField>
    <fullName>Weight_Segment__c</fullName>
    <description>Weight of Parcel.</description>
    <inlineHelpText>Select one segment.</inlineHelpText>
    <label>Weight Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below 1 kg</fullName>
                <default>true</default>
                <label>Below 1 kg</label>
            </value>
            <value>
                <fullName>1 to 3 kgs</fullName>
            </value>
            <value>
                <fullName>3 to 5 kgs</fullName>
            </value>
            <value>
                <fullName>5 to 10 kgs</fullName>
            </value>
            <value>
                <fullName>10 to 15 kgs</fullName>
            </value>
            <value>
                <fullName>more than 15 kgs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>